changed env for vercel

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUBLIC_URL= http://localhost:3000
+PUBLIC_URL=
 # REACT_APP_API_URL= http://10.4.160.240:8081
 REACT_APP_API_URL= http://192.168.31.209:8081
 REACT_APP_DEFAULTAUTH="jwt"
