--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ REACT_APP_MESSAGINGSENDERID=
 REACT_APP_APPID=
 REACT_APP_MEASUREMENTID=
 GENERATE_SOURCEMAP=false
+VITE_API_BASE_URL=http://192.168.31.209:8081/api
